samples/_failures_safe/1761317847_af7bfc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1ab3057e.c: In function ‘main’:
./samples/SAFE/__tmp_1ab3057e.c:148:25: error: missing terminating " character
  148 |         fprintf(stderr, "Comp
      |                         ^~~~~
./samples/SAFE/__tmp_1ab3057e.c:148:9: error: expected expression at end of input
  148 |         fprintf(stderr, "Comp
      |         ^~~~~~~
./samples/SAFE/__tmp_1ab3057e.c:148:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1ab3057e.c:148:9: error: expected declaration or statement at end of input
